Fix mobile styling issues (#240)
* Fixes the z-index. The scorecard was being hidden by the logo
* Fixes horizontal scroll showing up in the about popup due to the
iframe code
* Makes the logo smaller on bigger screens

--- a/src/css/_about.scss
+++ b/src/css/_about.scss
@@ -4,6 +4,7 @@
 @use "theme/icons";
 @use "theme/spacing";
 @use "theme/typography";
+@use "theme/zindex";
 
 @use "header";
 
@@ -23,7 +24,7 @@
   min-width: 200px;
   max-width: 800px;
   top: calc(header.$header-height + 25px);
-  z-index: 1003;
+  z-index: zindex.$about;
 
   background-color: colors.$white;
   font-size: typography.$font-size-base;
@@ -33,6 +34,7 @@
   border-radius: borders.$border-radius;
 
   overflow-y: auto;
+  overflow-wrap: break-word;
 
   h3 {
     margin: 0;
